# vuos

./: .gitignore  CMakeLists.txt  README.md  fixes.txt  lxt-run.sh  projbuild.sh  vu_syscalls.conf
cmd/: CMakeLists.txt  vu_insmod.c  vu_lsmod.c  vu_rmmod.c  vudebug.c  vumount.c  vuname.c  vustack.c  vusu.c  vuumount.c
demos/fcntlflock/: Makefile  dllock.c  fcntl_lock.c  fcntl_other.c  flock_lock.c
demos/flockdemo/: Makefile  executable  flockdemo.c
demos/openerr/: Makefile  executable  openerr.c
demos/wrongfcntl/: Makefile  executable  wrfcntl.c
include/: CMakeLists.txt  config.h.in  libvumod.h  vudev.h  vulib.h  vumisc.h  vumodlib.h  vumodule.h  vunet.h
libvumod/: CMakeLists.txt  vu_mod_pseudofile.c
man/: CMakeLists.txt  Makefile  fusenull.1  fusenull.1.md  fusereal.1  fusereal.1.md  umvu.1  umvu.1.md  umvu.1.ronn  vu_insmod.1  vu_insmod.1.md  vu_insmod.1.ronn  vu_lsmod.1  vu_lsmod.1.md  vu_lsmod.1.ronn  vu_rmmod.1  vu_rmmod.1.md  vu_rmmod.1.ronn  vudebug.1  vudebug.1.md  vudebug.1.ronn  vumount.1  vumount.1.md  vumount.1.ronn  vuname.1  vuname.1.md  vuname.1.ronn  vustack.1  vustack.1.md  vustack.1.ronn  vusu.1  vusu.1.md  vusu.1.ronn  vuumount.1  vuumount.1.md  vuumount.1.ronn
scripts/: CMakeLists.txt  Makefile  archtable_gen.py  r_table_gen.py  r_table_gen.sh  syscall_defs_gen.py  syscall_deps.sh  syscall_names_gen.py  syscall_names_gen.sh  syscall_nr_compat_gen.py  syscall_table_gen.py
test_modules/: CMakeLists.txt  mountreal.c  netlinkdump.c  unreal.c  unrealcap.c  unrealinfofs.c  unrealprw.c  unrealsock.c  unrealuidgid.c
umvu/: CMakeLists.txt  Makefile
umvu/include/: arch_table.h  canonicalize.h  carrot.h  epoch.h  hashtable.h  linux_32_64.h  mountflags.h  path_utils.h  ptrace_defs.h  r_table_compat.h  read_proc_status.h  service.h  syscall_names.h  syscall_table.h  umvu_peekpoke.h  umvu_tracer.h  umvu_tracer_seccomp.h  vu_access_emu.h  vu_chroot_exec.h  vu_execute.h  vu_fd_table.h  vu_file_table.h  vu_fnode_copy.h  vu_fs.h  vu_inheritance.h  vu_initfini.h  vu_log.h  vu_mmap_table.h  vu_mod_inheritance.h  vu_modutils.h  vu_name.h  vu_nesting.h  vu_pushpop.h  vu_slow_calls.h  vu_thread_sd.h  vu_tmpdir.h  vu_uidgid.h  vu_vnode.h  vu_wrap_rw_multiplex.h  vu_wrapper_utils.h  (+2 more)
umvu/src/: canonicalize.c  carrot.c  epoch.c  hashtable.c  linux_32_64.c  mountflags.c  path_utils.c  r_table.c  read_proc_status.c  service.c  syscall_names.c  umvu_main.c  umvu_peekpoke.c  umvu_tracer.c  umvu_tracer_seccomp.c  vu_access_emu.c  vu_choice.c  vu_chroot_exec.c  vu_execute.c  vu_fd_table.c  vu_file_table.c  vu_fnode_copy.c  vu_fs.c  vu_inheritance.c  vu_initfini.c  vu_log.c  vu_mmap_table.c  vu_mod_inheritance.c  vu_mod_pseudofile.c  vu_modutils.c  vu_name.c  vu_nesting.c  vu_pthreads.c  vu_pushpop.c  vu_slow_calls.c  vu_thread_sd.c  vu_tmpdir.c  vu_uidgid.c  vu_vnode.c  vu_vwrap_vumgmt.c  (+14 more)
vubinfmt/: CMakeLists.txt  vubinfmt.c
vudev/: CMakeLists.txt  vudev.c
vudev_modules/: CMakeLists.txt  vudevmbr.c  vudevnull.c  vudevpartx.c  vudevramdisk.c  vudevvdi.c
vudevfuse/: CMakeLists.txt  devfuse.c  devfuse.h  eventsem.h  fusenode.c  fusenode.h  fusereqq.c  fusereqq.h  listx.h  vudevfuse.c  vudevfuse.h  vudevfuse_ops.c
vufs/: CMakeLists.txt  vufs.c  vufs.h  vufs_getdents.c  vufs_getdents.h  vufs_path.c  vufs_path.h  vufsa.c  vufsa.h  vufsops.c  vufstat.c  vufstat.h  vustat.c  vustat.h
vufuse/: CMakeLists.txt  fuse_opt.c  vufuse.c  vufuse.h  vufuse_compat.c  vufuse_default_ops.c  vufuse_default_ops.h  vufuse_node.c  vufuse_node.h  vufuse_startmain.c  vufuse_startmain.h  vufuseop.c
vufuse_modules/: CMakeLists.txt  vufusenull.c  vufusereal.c
vumisc/: CMakeLists.txt  vumisc.c
vumisc_modules/: CMakeLists.txt  vumisctime.c
vumodlib/: CMakeLists.txt  vu_mod_pseudofile.c
vunet/: CMakeLists.txt  vunet.c  vunet_ioctl.c
vunet_modules/: CMakeLists.txt  vunetnull.c  vunetreal.c  vunetvdestack.c
