cmake_minimum_required(VERSION 2.6)

include_directories(${VU_HEADERS} ${VU_DYN_HEADER_PATH})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

file(GLOB VUFUSE_MODULES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_FILE_OFFSET_BITS=64")

foreach(VUFUSE_MOD ${VUFUSE_MODULES})
    string(REPLACE ".c" "" VUFUSE_MOD_FILE ${VUFUSE_MOD})
    get_filename_component(VUFUSE_MOD_TARGET ${VUFUSE_MOD_FILE} NAME)
    add_library(${VUFUSE_MOD_TARGET} SHARED ${VUFUSE_MOD})
    set_target_properties(${VUFUSE_MOD_TARGET} PROPERTIES PREFIX "")
    install(TARGETS ${VUFUSE_MOD_TARGET} LIBRARY DESTINATION ${MODULES_INSTALL_PATH})
endforeach(VUFUSE_MOD)

